# mt5

./: .gitignore  README.md  close_trades.txt  pyproject.toml
scripts/: collect_real_spreads.py  compare_spread_distributions.py  run_live_simulation.py  run_short_validation.py  validate_ftmo_mt5_connection.py
tests/integration/: __init__.py  test_live_simulation_performance.py  test_live_simulation_positions.py  test_live_simulation_risk_integration.py  test_live_simulation_structure.py  test_mt5_connection.py  test_validate_ftmo_mt5_connection_structure.py
tests/unit/: test_accounting.py  test_collect_real_spreads_logic.py  test_cooldown.py  test_equity.py  test_execution_models.py  test_execution_simulator.py  test_exposure.py  test_frequency.py  test_hard_risk.py  test_kill_switch.py  test_market_validation.py  test_mode.py  test_models.py  test_mt5_market_data_time_normalization.py  test_mt5_time_normalization.py  test_orchestrator.py  test_performance_tracker.py  test_position_sizing.py  test_position_tracker.py  test_precheck.py  test_rules.py  test_sanity.py  test_spread_generator.py  test_spread_models.py  test_spread_stats.py  test_spread_validation.py  test_structured_logging.py  test_system_state.py
tests/validation/: __init__.py
trading_supervisor/: __init__.py  main.py
trading_supervisor/core/: __init__.py  config.py  enums.py  errors.py  logging.py  mode.py  structured_logging.py
trading_supervisor/execution/: __init__.py  execution_models.py  position_sizing.py  precheck.py  simulator.py
trading_supervisor/market/: __init__.py  (+3 more)
(+31 files in other folders)
